Add hide newsletter endpoint
